# lotto_analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
analytics/: pyproject.toml
backend/: requirements.txt
backend/app/: database.py  main.py  schemas.py
backend/app/routers/: analytics.py  drawings.py  patterns.py  statistics.py
backend/tests/: conftest.py  test_analytics.py  test_drawings.py  test_patterns.py  test_statistics.py
docs/: milestones.md  operational-plan.md  product-spec.md  roadmap.md  sdd.md  structure.md  ux-vision.md
docs/decisions/: 001-fastapi.md  002-sqlite-to-postgres.md  003-analytics-separation.md  004-python-stack.md  005-frontend-stack.md
docs/features/: ai-insights.md  clustering.md  dashboard.md  ingestion.md  metrics.md  statistics.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analises/: layout.tsx  page.tsx
frontend/app/analises/estatisticas/: page.tsx
frontend/app/jogo/: page.tsx
frontend/components/: analysis-layout.tsx  cooccurrence-table.tsx  date-filter.tsx  drawing-drawer.tsx  drawings-table.tsx  drought-table.tsx  filter-bar.tsx  frequency-decades.tsx  frequency-grid.tsx  frequency-histogram.tsx  frequency-ranking.tsx  navbar.tsx  pattern-chart.tsx  prize-chart.tsx
frontend/lib/: api.ts
scripts/: export.py  ingest_mega_sena.py  requirements.txt  seed_db.py
scripts/ci/: check_docs.py
scripts/tests/: conftest.py  test_csv.py  test_parse.py  test_seed.py
(+3 files in other folders)
